Fix send message overlap

--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ button {
 
 .textarea {
   padding: 1rem 1.5rem;
-  height: 300px;
+  height: 7rem;
   border-radius: 1rem;
 }
 
